--- a/scss/_mainIndex.scss
+++ b/scss/_mainIndex.scss
@@ -1,16 +1,17 @@
 main {
+  @include flex(column, center);
+  .btn-return {
+    box-shadow: 8px 8px 8px rgba(0, 0, 0, 0.25);
+    border: 1px solid black;
+    border-radius: 15px;
+    padding: 10px;
+    margin-top: 10px;
+    &:hover {
+      @extend %hoverBacks;
+    }
+  }
   .container {
     @include flex(column, center);
-    .btn-return {
-      box-shadow: 8px 8px 8px rgba(0, 0, 0, 0.25);
-      border: 1px solid black;
-      border-radius: 15px;
-      padding: 10px;
-      margin-top: 10px;
-      &:hover {
-        @extend %hoverBacks;
-      }
-    }
     .card {
       @include flex(column, center);
       justify-content: space-between;
