--- a/scss/_responsiveIndex.scss
+++ b/scss/_responsiveIndex.scss
@@ -1,5 +1,8 @@
 @media (min-width: 768px) {
   main {
+    .btn-return {
+      font-size: 26px;
+    }
     .container {
       flex-direction: row;
       flex-wrap: wrap;
